--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -4,52 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>JEOPRTY</title>
     <link rel="stylesheet" href="../css/jeporty.css">
 </head>
 <body>
-   <div id="cat1"></div>
-   <div id="cat2"></div>
-   <div id="cat3"></div>
-   <div id="cat4"></div>
-    <div id="cat5"></div>
-    <div id="cat6"></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+<!-- tittle of the game just cause -->
+        <div id="title">JEOPRTY</div>
+        <!-- catigories -->
+   <div id="cat1" class="cat"></div>
+   <div id="cat2"class="cat"></div>
+   <div id="cat3"class="cat"></div>
+   <div id="cat4"class="cat"></div>
+    <div id="cat5"class="cat"></div>
+    <div id="cat6"class="cat"></div>
+    <!-- question boxes -->
+    <div class="questions1-1"><a href="">1</a></div>
+    <div class="questions1-2"><a href="">1</a></div>
+    <div class="questions1-3"><a href="">1</a></div>
+    <div class="questions1-4"><a href="">1</a></div>
+    <div class="questions1-5"><a href="">1</a></div>
+    <div class="questions1-6"><a href="">1</a></div>
+    <div class="questions2-1"><a href="">2</a></div>
+    <div class="questions2-2"><a href="">2</a></div>
+    <div class="questions2-3"><a href="">2</a></div>
+    <div class="questions2-4"><a href="">2</a></div>
+    <div class="questions2-5"><a href="">2</a></div>
+    <div class="questions2-6"><a href="">2</a></div>
+    <div class="questions3-1"><a href="">3</a></div>
+    <div class="questions3-2"><a href="">3</a></div>
+    <div class="questions3-3"><a href="">3</a></div>
+    <div class="questions3-4"><a href="">3</a></div>
+    <div class="questions3-5"><a href="">3</a></div>
+    <div class="questions3-6"><a href="">3</a></div>
+    <div class="questions4-1"><a href="">4</a></div>
+    <div class="questions4-2"><a href="">4</a></div>
+    <div class="questions4-3"><a href="">4</a></div>
+    <div class="questions4-4"><a href="">4</a></div>
+    <div class="questions4-5"><a href="">4</a></div>
+    <div class="questions4-6"><a href="">4</a></div>
+    <div class="questions5-1"><a href="">5</a></div>
+    <div class="questions5-2"><a href="">5</a></div>
+    <div class="questions5-3"><a href="">5</a></div>
+    <div class="questions5-4"><a href="">5</a></div>
+    <div class="questions5-5"><a href="">5</a></div>
+    <div class="questions5-6"><a href="">5</a></div>
+    <div class="questions6-1"><a href="">6</a></div>
+    <div class="questions6-2"><a href="">6</a></div>
+    <div class="questions6-3"><a href="">6</a></div>
+    <div class="questions6-4"><a href="">6</a></div>
+    <div class="questions6-5"><a href="">6</a></div>
+    <div class="questions6-6"><a href="">6</a> </div>
+   
 
-</body>
+    <div id="modalback">
+        <!-- must find away to pop a diffrent modal div on click -->
+            <div class="modal-con1-1">
+                <button id="close"> &times; </button>
+                <p>Live webcam coming soon</p>
+            </div>
+        </div>
+
+        <script type="text/javascript" src="iphon.js"></script>
+
+    </body>
 </html>
