--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- tittle of the game just cause -->
-    <div id="title">JEOPRTY</div>
+    <div id="title"></div>
     <!-- catigories -->
     <div id="cat1" class="cat"></div>
     <div id="cat2" class="cat"></div>
@@ -21,120 +21,126 @@
     <div id="cat6" class="cat"></div>
     <!-- question boxes -->
     <div id="questions1-1">
-        <a href="">1</a>
+        <a class="points1" href="#">1</a>
     </div>
     <div id="questions1-2">
-        <a href="">1</a>
+        <a class="points2" href="#">1</a>
     </div>
     <div id="questions1-3">
-        <a href="">1</a>
+        <a class="points3" href="#">1</a>
     </div>
     <div id="questions1-4">
-        <a href="">1</a>
+        <a class="points4" href="#">1</a>
     </div>
     <div id="questions1-5">
-        <a href="">1</a>
+        <a class="points5" href="#">1</a>
     </div>
     <div id="questions1-6">
-        <a href="">1</a>
+        <a class="points6" href="#">1</a>
     </div>
     <div id="questions2-1">
-        <a href="">2</a>
+        <a class="points7" href="#">2</a>
     </div>
     <div id="questions2-2">
-        <a href="">2</a>
+        <a class="points8" href="#">2</a>
     </div>
     <div id="questions2-3">
-        <a href="">2</a>
+        <a class="points9" href="#">2</a>
     </div>
     <div id="questions2-4">
-        <a href="">2</a>
+        <a class="points10" href="#">2</a>
     </div>
     <div id="questions2-5">
-        <a href="">2</a>
+        <a class="points11" href="#">2</a>
     </div>
     <div id="questions2-6">
-        <a href="">2</a>
+        <a class="points12" href="#">2</a>
     </div>
     <div id="questions3-1">
-        <a href="">3</a>
+        <a class="points13" href="#">3</a>
     </div>
     <div id="questions3-2">
-        <a href="">3</a>
+        <a class="points14" href="#">3</a>
     </div>
     <div id="questions3-3">
-        <a href="">3</a>
+        <a class="points15" href="#">3</a>
     </div>
     <div id="questions3-4">
-        <a href="">3</a>
+        <a class="points16" href="#">3</a>
     </div>
     <div id="questions3-5">
-        <a href="">3</a>
+        <a class="points17" href="#">3</a>
     </div>
     <div id="questions3-6">
-        <a href="">3</a>
+        <a class="points18" href="#">3</a>
     </div>
     <div id="questions4-1">
-        <a href="">4</a>
+        <a class="points19" href="#">4</a>
     </div>
     <div id="questions4-2">
-        <a href="">4</a>
+        <a class="points20" href="#">4</a>
     </div>
     <div id="questions4-3">
-        <a href="">4</a>
+        <a class="points21" href="#">4</a>
     </div>
     <div id="questions4-4">
-        <a href="">4</a>
+        <a class="points22" href="#">4</a>
     </div>
     <div id="questions4-5">
-        <a href="">4</a>
+        <a class="points23" href="#">4</a>
     </div>
     <div id="questions4-6">
-        <a href="">4</a>
+        <a class="points24" href="#">4</a>
     </div>
     <div id="questions5-1">
-        <a href="">5</a>
+        <a class="points25" href="#">5</a>
     </div>
     <div id="questions5-2">
-        <a href="">5</a>
+        <a class="points26" href="#">5</a>
     </div>
     <div id="questions5-3">
-        <a href="">5</a>
+        <a class="points27" href="#">5</a>
     </div>
     <div id="questions5-4">
-        <a href="">5</a>
+        <a class="points28" href="#">5</a>
     </div>
     <div id="questions5-5">
-        <a href="">5</a>
+        <a class="points29" href="#">5</a>
     </div>
     <div id="questions5-6">
-        <a href="">5</a>
+        <a class="points30" href="#">5</a>
     </div>
     <div id="questions6-1">
-        <a href="">6</a>
+        <a class="points31" href="#">6</a>
     </div>
     <div id="questions6-2">
-        <a href="">6</a>
+        <a class="points32" href="#">6</a>
     </div>
     <div id="questions6-3">
-        <a href="">6</a>
+        <a class="points33" href="#">6</a>
     </div>
     <div id="questions6-4">
-        <a href="">6</a>
+        <a class="points34" href="#">6</a>
     </div>
     <div id="questions6-5">
-        <a href="">6</a>
+        <a class="points35" href="#">6</a>
     </div>
     <div id="questions6-6">
-        <a href="">6</a>
+        <a class="points36" href="#">6</a>
     </div>
+
+
+    <!-- |||||||||||||||||||||||||||||||||||||||| -->
+    <!-- ||||||||||||||||||||||||||||||||||||||||||||| -->
+    <!-- ||||||||||||||||||||||||||||||||||||| -->
+
 
 
     <div id="modalback">
         <!-- must find away to pop a diffrent modal div on click -->
         <div id="modal-con1-1" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+            <p> <a href="#">it didnt work</a> <a href="#">kinda sorta <a href="#"></a>that did the  trick</a></p>
         </div>
 
         <div id="modal-con1-2" class="m">
