about to walk away

--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -140,7 +140,13 @@
         <!-- must find away to pop a diffrent modal div on click -->
         <div id="modal-con1-1" class="m">
             <button class="close"> &times; </button>
-            <p> <a href="#">it didnt work</a> <a href="#">kinda sorta <a href="#"></a>that did the  trick</a></p>
+            <p>
+                <a class="d" href="#"> A. It didnt work </a>
+                <br>
+                <a class="d" href="#"> B. Kinda sorta</a>
+                <br>
+                <a class="d" href="#">C. That did the trick</a>
+            </p>
         </div>
 
         <div id="modal-con1-2" class="m">
