im trying jamiegit add -A

--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -145,7 +145,7 @@
                 <br>
                 <a class="d" href="#"> B. Kinda sorta</a>
                 <br>
-                <a class="d" href="#">C. That did the trick</a>
+                <a class="g" href="#">C. That did the trick</a>
             </p>
         </div>
 
