--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -141,11 +141,13 @@
         <div id="modal-con1-1" class="m">
             <button class="close"> &times; </button>
             <p>
-                <a class="d" href="#"> A. It didnt work </a>
+               <span class="dubbleJeopardy"> Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
                 <br>
-                <a class="d" href="#"> B. Kinda sorta</a>
+                <a class="d" href="#"> B.what is:one hundred. </a>
                 <br>
-                <a class="g" href="#">C. That did the trick</a>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
             </p>
         </div>
 
