--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -21,112 +21,112 @@
     <div id="cat6" class="cat"></div>
     <!-- question boxes -->
     <div id="questions1-1">
-        <a class="points1" href="#">1</a>
+        <a class="points1" href="#">100</a>
     </div>
     <div id="questions1-2">
-        <a class="points2" href="#">1</a>
+        <a class="points2" href="#">100</a>
     </div>
     <div id="questions1-3">
-        <a class="points3" href="#">1</a>
+        <a class="points3" href="#">100</a>
     </div>
     <div id="questions1-4">
-        <a class="points4" href="#">1</a>
+        <a class="points4" href="#">100</a>
     </div>
     <div id="questions1-5">
-        <a class="points5" href="#">1</a>
+        <a class="points5" href="#">100</a>
     </div>
     <div id="questions1-6">
-        <a class="points6" href="#">1</a>
+        <a class="points6" href="#">100</a>
     </div>
     <div id="questions2-1">
-        <a class="points7" href="#">2</a>
+        <a class="points7" href="#">200</a>
     </div>
     <div id="questions2-2">
-        <a class="points8" href="#">2</a>
+        <a class="points8" href="#">200</a>
     </div>
     <div id="questions2-3">
-        <a class="points9" href="#">2</a>
+        <a class="points9" href="#">200</a>
     </div>
     <div id="questions2-4">
-        <a class="points10" href="#">2</a>
+        <a class="points10" href="#">200</a>
     </div>
     <div id="questions2-5">
-        <a class="points11" href="#">2</a>
+        <a class="points11" href="#">200</a>
     </div>
     <div id="questions2-6">
-        <a class="points12" href="#">2</a>
+        <a class="points12" href="#">200</a>
     </div>
     <div id="questions3-1">
-        <a class="points13" href="#">3</a>
+        <a class="points13" href="#">300</a>
     </div>
     <div id="questions3-2">
-        <a class="points14" href="#">3</a>
+        <a class="points14" href="#">300</a>
     </div>
     <div id="questions3-3">
-        <a class="points15" href="#">3</a>
+        <a class="points15" href="#">300</a>
     </div>
     <div id="questions3-4">
-        <a class="points16" href="#">3</a>
+        <a class="points16" href="#">300</a>
     </div>
     <div id="questions3-5">
-        <a class="points17" href="#">3</a>
+        <a class="points17" href="#">300</a>
     </div>
     <div id="questions3-6">
-        <a class="points18" href="#">3</a>
+        <a class="points18" href="#">300</a>
     </div>
     <div id="questions4-1">
-        <a class="points19" href="#">4</a>
+        <a class="points19" href="#">400</a>
     </div>
     <div id="questions4-2">
-        <a class="points20" href="#">4</a>
+        <a class="points20" href="#">400</a>
     </div>
     <div id="questions4-3">
-        <a class="points21" href="#">4</a>
+        <a class="points21" href="#">400</a>
     </div>
     <div id="questions4-4">
-        <a class="points22" href="#">4</a>
+        <a class="points22" href="#">400</a>
     </div>
     <div id="questions4-5">
-        <a class="points23" href="#">4</a>
+        <a class="points23" href="#">400</a>
     </div>
     <div id="questions4-6">
-        <a class="points24" href="#">4</a>
+        <a class="points24" href="#">400</a>
     </div>
     <div id="questions5-1">
-        <a class="points25" href="#">5</a>
+        <a class="points25" href="#">500</a>
     </div>
     <div id="questions5-2">
-        <a class="points26" href="#">5</a>
+        <a class="points26" href="#">500</a>
     </div>
     <div id="questions5-3">
-        <a class="points27" href="#">5</a>
+        <a class="points27" href="#">500</a>
     </div>
     <div id="questions5-4">
-        <a class="points28" href="#">5</a>
+        <a class="points28" href="#">500</a>
     </div>
     <div id="questions5-5">
-        <a class="points29" href="#">5</a>
+        <a class="points29" href="#">500</a>
     </div>
     <div id="questions5-6">
-        <a class="points30" href="#">5</a>
+        <a class="points30" href="#">500</a>
     </div>
     <div id="questions6-1">
-        <a class="points31" href="#">6</a>
+        <a class="points31" href="#">600</a>
     </div>
     <div id="questions6-2">
-        <a class="points32" href="#">6</a>
+        <a class="points32" href="#">600</a>
     </div>
     <div id="questions6-3">
-        <a class="points33" href="#">6</a>
+        <a class="points33" href="#">600</a>
     </div>
     <div id="questions6-4">
-        <a class="points34" href="#">6</a>
+        <a class="points34" href="#">600</a>
     </div>
     <div id="questions6-5">
-        <a class="points35" href="#">6</a>
+        <a class="points35" href="#">600</a>
     </div>
     <div id="questions6-6">
-        <a class="points36" href="#">6</a>
+        <a class="points36" href="#">600</a>
     </div>
 
 
@@ -153,17 +153,38 @@
 
         <div id="modal-con1-2" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+            <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+            <br>
+             <a class="d" href="#"> A.what is: It didnt work? </a>
+             <br>
+             <a class="d" href="#"> B.what is:one hundred. </a>
+             <br>
+             <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+         </p>
         </div>
 
         <div id="modal-con1-3" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
 
         <div id="modal-con1-4" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
 
         <div id="modal-con1-5" class="m">
@@ -218,94 +239,248 @@
 
         <div id="modal-con3-3" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
 
         <div id="modal-con3-4" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
 
         <div id="modal-con3-5" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
 
         <div id="modal-con3-6" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con4-1" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con4-2" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con4-3" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con4-4" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con4-5" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con4-6" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con5-1" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con5-2" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con5-3" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con5-4" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con5-5" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con5-6" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con6-1" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con6-2" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con6-3" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con6-4" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con6-5" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
         <div id="modal-con6-6" class="m">
             <button class="close"> &times; </button>
-            <p>Live webcam coming soon</p>
+             <span > Dubble jeopardy: Scoop-diddy-whoop?</span>
+               <br>
+                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <br>
+                <a class="d" href="#"> B.what is:one hundred. </a>
+                <br>
+                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+            </p>
         </div>
 
 
@@ -314,6 +489,32 @@
 
 
     </div>
+    <div class=wraper>
+    <div class="Contestents">
+        <div>
+            PLAYER ONE: <input type="text">
+        </div>
+        <div>
+            SCORE: <span class="score1"></span>
+        </div>
+    </div>
+    <div class="Contestents">
+            <div>
+                PLAYER Two:<input type="text">
+            </div>
+            <div>
+                SCORE: <span class="score1"></span>
+            </div>
+        </div>
+        <div class="Contestents">
+                <div>
+                    PLAYER Three: <input type="text">
+                </div>
+                <div>
+                    SCORE: <span class="score1"></span>
+                </div>
+            </div>
+   </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="../css/js/jeporty.js"></script>
