--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -143,11 +143,11 @@
             <p>
                <span class="dubbleJeopardy"> Dubble jeopardy: Scoop-diddy-whoop?</span>
                <br>
-                <a class="d" href="#"> A.what is: It didnt work? </a>
+                <a class="d c" href="#"> A.what is: It didnt work? </a>
                 <br>
-                <a class="d" href="#"> B.what is:one hundred. </a>
+                <a class="d c" href="#"> B.what is:one hundred. </a>
                 <br>
-                <a class="d" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
             </p>
         </div>
 
@@ -503,7 +503,7 @@
                 PLAYER Two:<input type="text">
             </div>
             <div>
-                SCORE: <span class="score1"></span>
+                SCORE: <span class="score2"></span>
             </div>
         </div>
         <div class="Contestents">
@@ -511,7 +511,7 @@
                     PLAYER Three: <input type="text">
                 </div>
                 <div>
-                    SCORE: <span class="score1"></span>
+                    SCORE: <span class="score3"></span>
                 </div>
             </div>
    </div>
