--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -544,10 +544,18 @@
    </div>
 
 <div id="erric">
-
-
+<span>GAME OVER</span>
         <div class="Contestents">
                 <div>
+                    PLAYER ONE: <input type="text">
+                </div>
+                <div>
+                    SCORE: <span class="score1"></span>
+                </div>
+            </div>
+        <div class="Contestents">
+               
+            <div>
                     PLAYER Two:<input type="text">
                 </div>
                 <div>
