--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -15,10 +15,10 @@
     <!-- catigories -->
     <div id="cat1" class="cat"><h1>D3</h1></div>
     <div id="cat2" class="cat">HTML</div>
-    <div id="cat3" class="cat"></div>
-    <div id="cat4" class="cat"></div>
-    <div id="cat5" class="cat"></div>
-    <div id="cat6" class="cat"></div>
+    <div id="cat3" class="cat">METHODS</div>
+    <div id="cat4" class="cat">JavaScript</div>
+    <div id="cat5" class="cat">LIBRARIES</div>
+    <div id="cat6" class="cat">KEY SHORT CUTS</div>
     <!-- question boxes -->
     <div id="questions1-1">
         <a class="points1" href="#">100</a>
@@ -222,9 +222,9 @@
                 <br>
                 <a class="d c" href="#"> A.what is: TRY RESTARTING YOUR CPU? </a>
                 <br>
-                <a class="d c" href="#"> B.what is:one ONE THOUSOND. </a>
+                <a class="g c" href="#"> B.what is:The HTML <span> tag is used for grouping and applying styles to inline elements?</a>
                 <br>
-                <a class="g c" href="#">C.What is:The HTML <span> tag is used for grouping and applying styles to inline elements?</a>
+                <a class="d c" href="#">C.What is:ONE THOUSAND!</a>
             </p>
         </div>
 
@@ -261,13 +261,13 @@
         <div id="modal-con3-3" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> Dubble jeopardy: Scoop-diddy-whoop?</span>
+                <span class="singleJeopardy"> WHAT IS DOT SPLICE!?</span>
                 <br>
-                <a class="d c" href="#"> A.what is: It didnt work? </a>
+                <a class="d c" href="#"> A.what is: The splice() method changes the contents of an array by removing existing elements and/or adding new elements.? </a>
                 <br>
-                <a class="d c" href="#"> B.what is:one hundred. </a>
+                <a class="d c" href="#"> B.what is:SIXTY SIX. </a>
                 <br>
-                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="g c" href="#">C.What is:What browserare you using?</a>
             </p>
         </div>
 
@@ -348,13 +348,13 @@
         <div id="modal-con4-4" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> Dubble jeopardy: Scoop-diddy-whoop?</span>
+                <span class="singleJeopardy"> WHAt funtion would you use to set the date of an object?</span>
                 <br>
-                <a class="d c" href="#"> A.what is: It didnt work? </a>
+                <a class="d c" href="#"> A.what is: not enough ram? </a>
                 <br>
                 <a class="d c" href="#"> B.what is:one hundred. </a>
                 <br>
-                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="g c" href="#">C.What is:The splice() method changes the contents of an array by removing existing elements and/or adding new elements.?</a>
             </p>
         </div>
         <div id="modal-con4-5" class="m">
@@ -424,13 +424,14 @@
         <div id="modal-con5-5" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> Dubble jeopardy: Scoop-diddy-whoop?</span>
+                <span class="singleJeopardy"> How would I emplment BootStrap to a webpage?</span>
                 <br>
-                <a class="d c" href="#"> A.what is: It didnt work? </a>
+                <a class="g c" href="#"> A.what is: link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+                    ? </a>
                 <br>
-                <a class="d c" href="#"> B.what is:one hundred. </a>
+                <a class="d c" href="#"> B.what is:try restarting your modem. </a>
                 <br>
-                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="d c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
             </p>
         </div>
         <div id="modal-con5-6" class="m">
@@ -500,13 +501,13 @@
         <div id="modal-con6-6" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> Dubble jeopardy: Scoop-diddy-whoop?</span>
+                <span class="singleJeopardy"> What is the multi select tool?</span>
                 <br>
                 <a class="d c" href="#"> A.what is: It didnt work? </a>
                 <br>
                 <a class="d c" href="#"> B.what is:one hundred. </a>
                 <br>
-                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="g c" href="#">C.What is:What is command D</a>
             </p>
         </div>
 
