--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -235,7 +235,15 @@
 
         <div id="modal-con2-4" class="m">
             <button class="close"> &times; </button>
-            <p>oouuuu</p>
+            <p>
+                    <span class="singleJeopardy"> What is the multi select tool?</span>
+                    <br>
+                    <a class="d c" href="#"> A.what is: It didnt work? </a>
+                    <br>
+                    <a class="d c" href="#"> B.what is:one hundred. </a>
+                    <br>
+                    <a class="g c" href="#">C.What is:What is command D</a>
+                </p>
         </div>
 
         <div id="modal-con2-5" class="m">
@@ -245,7 +253,15 @@
 
         <div id="modal-con2-6" class="m">
             <button class="close"> &times; </button>
-            <p>oouuuu</p>
+            <p>
+                    <span class="singleJeopardy"> What is the multi select tool?</span>
+                    <br>
+                    <a class="d c" href="#"> A.what is: It didnt work? </a>
+                    <br>
+                    <a class="d c" href="#"> B.what is:one hundred. </a>
+                    <br>
+                    <a class="g c" href="#">C.What is:What is command D</a>
+                </p>
         </div>
 
         <div id="modal-con3-1" class="m">
@@ -255,7 +271,15 @@
 
         <div id="modal-con3-2" class="m">
             <button class="close"> &times; </button>
-            <p>oouuuu</p>
+            <p>
+                    <span class="singleJeopardy"> What is the multi select tool?</span>
+                    <br>
+                    <a class="d c" href="#"> A.what is: It didnt work? </a>
+                    <br>
+                    <a class="d c" href="#"> B.what is:one hundred. </a>
+                    <br>
+                    <a class="g c" href="#">C.What is:What is command D</a>
+                </p>
         </div>
 
         <div id="modal-con3-3" class="m">
@@ -263,11 +287,11 @@
             <p>
                 <span class="singleJeopardy"> WHAT IS DOT SPLICE!?</span>
                 <br>
-                <a class="d c" href="#"> A.what is: The splice() method changes the contents of an array by removing existing elements and/or adding new elements.? </a>
+                <a class="g c" href="#"> A.what is: The splice() method changes the contents of an array by removing existing elements and/or adding new elements.? </a>
                 <br>
                 <a class="d c" href="#"> B.what is:SIXTY SIX. </a>
                 <br>
-                <a class="g c" href="#">C.What is:What browserare you using?</a>
+                <a class="d c" href="#">C.What is:What browserare you using?</a>
             </p>
         </div>
 
@@ -354,7 +378,7 @@
                 <br>
                 <a class="d c" href="#"> B.what is:one hundred. </a>
                 <br>
-                <a class="g c" href="#">C.What is:The splice() method changes the contents of an array by removing existing elements and/or adding new elements.?</a>
+                <a class="g c" href="#">C.What is:The DateString() Method.?</a>
             </p>
         </div>
         <div id="modal-con4-5" class="m">
