--- a/jepordy/html/jeporty.html
+++ b/jepordy/html/jeporty.html
@@ -126,13 +126,13 @@
             <p>
                 <span class="dubbleJeopardy"> Dubble jeopardy: This JavaScript Function is how you get basic output to display into the terminal?</span>
                 <br>
-                <a class="d c" href="#"> A.Puts  </a>
+                <a class="d c" href="#"> A. Puts  </a>
                 <br>
-                <a class="d c" href="#"> B.System.out.println  </a>
+                <a class="d c" href="#"> B. System.out.println  </a>
                 <br>
-                <a class="g c" href="#">C.Console.log () </a>
+                <a class="g c" href="#">C. Console.log () </a>
                 <br>
-                <a class="d c" href="#"> D.Show”  </a>
+                <a class="d c" href="#"> D. Show </a>
                 
             </p>
         </div>
@@ -201,13 +201,15 @@
         <div id="modal-con1-6" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> What are advantages of noSQL</span>
+                <span class="singleJeopardy"> What does the ⌘ symbol stand for on a mac keyboard? </span>
                 <br>
-                <a class="d c" href="#"> A.what is: It didnt work? </a>
+                <a class="g c" href="#"> A. Command </a>
                 <br>
-                <a class="d c" href="#"> B.what is:one hundred. </a>
+                <a class="d c" href="#"> B. Shift</a>
                 <br>
-                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="d c" href="#">C. Caps Lock</a>
+                <br>
+                <a class="d c" href="#">D. Options </a>
             </p>
         </div>
         <div id="modal-con2-1" class="m">
@@ -287,27 +289,29 @@
         <div id="modal-con2-6" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> What are advantages of noSQL</span>
+                <span class="singleJeopardy">Start a Spotlight search in the Finder window on a mac</span>
                 <br>
-                <a class="d c" href="#"> A.what is: It didnt work? </a>
+                <a class="d c" href="#"> A.Command-B </a>
                 <br>
-                <a class="d c" href="#"> B.what is:one hundred. </a>
+                <a class="d c" href="#"> B. Control–Down Arrow </a>
                 <br>
-                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="d c" href="#">C. Command-Y</a>
+                <br>
+                <a class="g c" href="#">D. Command-F</a>
             </p>
         </div>
         <div id="modal-con3-1" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> Map is a common javascript function that does what?”</span>
+                <span class="singleJeopardy"> Map is a common javascript function that does what?</span>
                 <br>
                 <a class="d c" href="#"> A. Looks up and displays the default gateway, and IP address of your computer </a>
                 <br>
                 <a class="d c" href="#"> B. Creates a string that matches an arrays parameters </a>
                 <br>
-                <a class="d c" href="#">C. Creates a function that reads a computers mac address ”</a>
+                <a class="d c" href="#">C. Creates a function that reads a computers mac address </a>
                 <br>
-                <a class="g c" href="#">D. Creates a new array from each element in an parent array  C </a>
+                <a class="g c" href="#">D. Creates a new array from each element in an parent array   </a>
             </p>
         </div>
 
@@ -373,13 +377,15 @@
         <div id="modal-con3-6" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> What are advantages of noSQL</span>
+                <span class="singleJeopardy"> To italicize text on a mac</span>
                 <br>
-                <a class="d c" href="#"> A.what is: It didnt work? </a>
+                <a class="d c" href="#"> A. Control-I </a>
                 <br>
-                <a class="d c" href="#"> B.what is:one hundred. </a>
+                <a class="d c" href="#"> B. Command-Shift-I </a>
                 <br>
-                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="g c" href="#">C. Command-I</a>
+                <br>
+                <a class="d c" href="#">D. Control–Command–I</a>
             </p>
         </div>
         <div id="modal-con4-1" class="m">
@@ -393,7 +399,7 @@
                 <br>
                 <a class="d c" href="#">C. Is a function that belongs to one of the three pure function classes</a>
                 <br>
-                <a class="g c" href="#">D. Is a function that does not create side effects C</a>
+                <a class="g c" href="#">D. Is a function that does not create side effects </a>
             </p>
         </div>
 
@@ -457,13 +463,15 @@
         <div id="modal-con4-6" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> What are advantages of noSQL</span>
+                <span class="singleJeopardy"> How would you delete the text between the insertion point and the end of the line or paragraph on a mac?</span>
                 <br>
-                <a class="d c" href="#"> A.what is: It didnt work? </a>
+                <a class="d c" href="#"> A. Control-O </a>
                 <br>
-                <a class="d c" href="#"> B.what is:one hundred. </a>
+                <a class="d c" href="#"> B. Control-P </a>
                 <br>
-                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="g c" href="#">C. Control-K</a>
+                <br>
+                <a class="d c" href="#"> D. Control-T     </a>
             </p>
         </div>
         <div id="modal-con5-1" class="m">
@@ -539,13 +547,15 @@
         <div id="modal-con5-6" class="m">
             <button class="close"> &times; </button>
             <p>
-                <span class="singleJeopardy"> If hired, what do you bring to the table?</span>
+                <span class="singleJeopardy"> In VSC what is the formating tool shortcut </span>
                 <br>
-                <a class="d c" href="#"> A.what is: It didnt work? </a>
+                <a class="d c" href="#"> A. Shift-Control-F </a>
                 <br>
-                <a class="d c" href="#"> B.what is:one hundred. </a>
+                <a class="d c" href="#"> B. Control-Option-D </a>
                 <br>
-                <a class="g c" href="#">C.What is:Whoop-di-scoop-di-poop?</a>
+                <a class="g c" href="#">C. Shift-Option-F</a>
+                <br>
+                <a class="d c" href="#">D. Shift-Control-D</a>
             </p>
         </div>
        
